# nonogram

./: CMakeLists.txt
nonogram/: CMakeLists.txt
nonogram/include/: i_nonogram.hpp  nonogram_factory.hpp
nonogram/src/impl/: nonogram.cpp  nonogram_factory.cpp
nonogram/src/incl/: nonogram.hpp
nonogram/test/: CMakeLists.txt  nonogram_test.cpp
nonogram/test/mocks_include/: mock_nonogram.hpp
nonogram_cli/: CMakeLists.txt
nonogram_cli/src/impl/: #main.cpp#  main.cpp
